--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   margin: 0;
+  padding: 0;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
